fix camera, rotation player, cursor json, collision

--- a/app/express/index.html
+++ b/app/express/index.html
@@ -1,4 +1,10 @@
 <html>
+    <style>
+        canvas {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
     <body>
         <script src="http://localhost:3000/script"></script>
     </body>
