--- a/app/express/index.html
+++ b/app/express/index.html
@@ -6,6 +6,6 @@
         }
     </style>
     <body>
-        <script src="http://localhost:3000/script"></script>
+        <script src="http://10.23.0.59:3000/script"></script>
     </body>
 </html>
